# docuscope

./: .editorconfig  .env.example  .env.sample  .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .trivyignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: badge.yml  blank.yml  ci.yml
app/: main.py
app/adapters/inbound/: http_api.py  task_result_tracker.py  tg_bot.py
app/adapters/inbound/embedding/: e5_mistral.py  gigachat.py  sbert_large_ru.py  sentence_transformers.py
app/adapters/inbound/http/: api.py
app/adapters/inbound/llm/: __init__.py  gigachat.py  null.py  yagpt.py
app/adapters/inbound/ocr/: null.py  paddle.py
app/adapters/inbound/queue/: task_result_tracker.py
app/adapters/inbound/storage/: minio.py  null.py
app/adapters/inbound/telegram/: tg_bot.py
app/adapters/inbound/vector/: null.py  qdrant.py
app/adapters/outbound/: __init__.py  embedding_yagpt.py  llm_yagpt.py  ocr_paddle.py  storage_minio.py  vectordb_qdrant.py
app/adapters/outbound/embedding/: __init__.py  bge_large.py  e5_mistral.py  gigachat.py  sentence_transformers.py  yagpt.py
app/adapters/outbound/llm/: __init__.py  gigachat.py  yagpt.py
app/adapters/outbound/ocr/: __init__.py  paddle.py
app/adapters/outbound/storage/: __init__.py  minio.py
app/adapters/outbound/tokenizer/: __init__.py  tiktoken_tokenizer.py
app/adapters/outbound/vector/: __init__.py  qdrant.py
app/application/: auth_service.py  billing_service.py  report_service.py
app/application/documents/: __init__.py
app/application/documents/conversion/: __init__.py  service.py
app/application/documents/detection/: __init__.py  codes.py  options.py  reasons.py  service.py
app/application/documents/dto/: __init__.py  chunk.py  common.py  enums.py  positions.py  table.py
app/application/documents/normalization/: __init__.py  filename.py  mime.py  normalizer.py
app/application/documents/policies/: __init__.py
app/core/: exceptions.py  logging_config.py  settings.py
app/core/ports/: __init__.py  embedding.py  ocr.py  storage.py  tokenizer.py  vector_store.py
app/core/settings/: __init__.py  ai.py  base.py  celery.py  logging.py  minio.py  postgres.py  telegram.py
app/domain/: __init__.py  exceptions.py  logging_config.py  models.py  services.py
app/domain/model/: __init__.py
app/domain/model/collections/: __init__.py  collection.py
app/domain/model/diagnostics/: __init__.py  health.py
app/domain/model/documents/: __init__.py  chunk.py  conversion.py  types.py  (+5 more)
app/domain/models/: __init__.py
app/domain/ports/: __init__.py  document_parser.py  embedder.py  ocr.py  storage.py  tokenizer.py  vector_store.py
app/domain/shared/: __init__.py
app/infrastructure/: __init__.py  di_container.py  di_mappings.py  task_queue.py
app/infrastructure/adapters/: embedding_null.py  embedding_yagpt.py  llm_null.py  llm_yagpt.py  vector_qdrant.py
app/infrastructure/config/: __init__.py
app/infrastructure/protocols/: __init__.py  embedding.py  llm.py  ocr.py  storage.py  vector_store.py
app/infrastructure/providers/: di_mappings.py
app/ports/: __init__.py  embedding.py  llm.py  ocr.py  storage.py  vector_store.py
app/utils/: splitter.py
docker/: .dockerignore  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.onprem  Dockerfile.slim  docker-compose-local.yml  docker-compose-onprem.yml  docker-compose.yml
docs/: API.md
scripts/: entrypoint.sh  install_onprem.sh  migrate.py  seed_contracts.py
tests/e2e/: test_dummy.py  test_dummy_e2e.py
tests/integration/: test_dummy.py  test_dummy_integration.py
tests/unit/: test_dummy.py  test_dummy_unit.py
tests/unit/ports/: test_ports.py
tests/unit/splitter/: test_splitter_property.py
(+199 files in other folders)
