[tool.poetry]
name = "docu-bot-service"
version = "0.1.0"
description = "Документоскоп"
authors = ["1708 Team"]
packages = [{ include = "app" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
aiogram = "^3.6"
pydantic = "^2.7"
pydantic-settings = "^2.2" 
celery = "^5.4"
redis = "^5.0"
asyncpg = "^0.29"
aiohttp = "^3.9"
httpx = "^0.27"
qdrant-client = "^1.8"
minio = "^7.2"
aioboto3 = "^12.0"
paddleocr = "^2.7"
python-dotenv = "^1.0"
opentelemetry-sdk = "^1.25"
opentelemetry-exporter-otlp = "^1.25"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
ruff = "^0.4"
black = "^24.4"
mypy = "^1.10"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "W", "I"]
ignore = ["E501"]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
]
