[tool.poetry]
name = "docu-bot-service"
version = "0.1.0"
description = "Документоскоп"
authors = ["1708 Team"]
packages = [{ include = "app" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
aiogram = "^3.6"
pydantic = "^2.7"
pydantic-settings = "^2.2" 
celery = "^5.4"
redis = "^5.0"
asyncpg = "^0.29"
aiohttp = "^3.9"
httpx = "^0.27"
qdrant-client = "^1.8"
minio = "^7.2"
aioboto3 = "^12.0"
paddleocr = "^2.7"
scipy = "<1.16"
python-dotenv = "^1.0"
opentelemetry-sdk = "^1.25"
opentelemetry-exporter-otlp = "^1.25"
structlog = "^24.1.0"
dependency-injector = "^4.41.0"
sentence-transformers = "^2.7"
torch = "^2.2.1"
tiktoken   = "^0.6"
datasketch = "^1.5"
hypothesis = "^6.100"
razdel     = "^0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
ruff = "^0.12"
black = "^24.4"
mypy = "^1.10"
docformatter = "^1.7"
pre-commit = "^3.7"

[tool.black]
line-length = 88
target-version = ["py312"]
preview = true 

[tool.ruff]
line-length = 88
fix = true
unsafe-fixes = false
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
extend-select = [
  "E", "F", "W",          # pycodestyle / pyflakes
  "I",                    # isort-style импорты (заменяет isort)
  "B",                    # bugbear (ошибки/антипаттерны)
  "C4",                   # flake8-comprehensions
  "SIM",                  # flake8-simplify
  "UP",                   # pyupgrade (современный синтаксис)
  "D",                    # pydocstyle (доки)
  "S",                    # bandit-like security
  "PT",                   # flake8-pytest-style
]
extend-ignore = [
  "D203", "D213",         # Google-style docstrings (одно и то же, но без двойного пробела)
  "E203",                 # конфликт Black↔E203 (slices)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"app/adapters/inbound/http_api.py" = ["B008"]
"app/adapters/outbound/vectordb_qdrant.py" = ["E501"]  # временный костыль
"tests/**/*.py" = ["S101"]         # разрешаем assert во всех тестах

[tool.mypy]
files = ["app"]
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
show_error_codes = true
pretty = true
exclude = ["tests/.*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.docformatter]
wrap-summaries = 72
black = true
pre-summary-newline = true
